From soweto live

--- a/index.html
+++ b/index.html
@@ -508,7 +508,7 @@ a {
                 <button type="button" class="close d-flex align-items-center justify-content-center" data-dismiss="modal" aria-label="Close">
                   <span aria-hidden="true" class="fa fa-close"></span>
                 </button>
-                <p>Did you know you get a part time job from Ramphele funerals?</p>
+                <p>This is an AD. Ads make money</p>
 
                 <div class="product-btns">
                   <a href="https://ramphela-funerals.business.site/?utm_source=gmb&utm_medium=referral" class="btn-small mr-2" >learn more</a>
@@ -516,12 +516,12 @@ a {
               </div>
               <div class="modal-body p-4 p-md-5">
                 <form action="#" class="appointment-form ftco-animate">
-                  <h5>Sibusiso Nobevu: 63 Trey Sunnyside</h5>
+                  <h5>Mzamo Myeki: Maboneng</h5>
                   <a href="#"> <img class="card-img" src="img/1.png" alt="Sbuda's Truck">
                     </a>
                     <br><br>
                     <div class="product-btns" style="padding-top: 5px;">
-                      <a href="tel:+4733378901" class="btn-small mr-2" download="Sbuda's truck">Call Now</a>
+                      <a href="tel:+27734293663" class="btn-small mr-2" download="Sbuda's truck">Call photographer</a>
                   </div>
                 </form>
               </div>
