--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@ a {
                   <h3><a href="">Shaun Khoza</a></h3>
               </div>
               <div class="product-btns">
-                <a href="" class="btn-small mr-2">View</a>
+                <a href="" class="btn-small mr-2" data-toggle="modal" data-target="#exampleModalCenter">View</a>
                 <a href="" class="btn-round mr-2"><i class="fa fa-shopping-cart">share</i></a>
                 <a href="" class="btn-round"><i class="fa fa-heart">like</i></a>
             </div>
@@ -565,7 +565,7 @@ a {
               </div>
               </div>
               <div class="modal-body p-4 p-md-5">
-                <form action="#" class="appointment-form ftco-animate">
+                <form action="#" class="appointment-form ftco-animate" >
                   <h5>Shaun: Maboneng photographer</h5>
                   <a href="#"> <img class="card-img" src="img/Shaun Khoza.jpg" alt="Sbuda's Truck">
                     </a>
