--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="assets/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/css/styles.css">
-  <title>BRANCHKODE | Maboneng</title>
+  <title>Branch Kode | Come if you need good pictures. We are the client hub all all good photographers - </title>
   <style>
      .password {
         border-radius: 25px;
