--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@ a {
                     </div>
                     <div class="product-btns">
       
-                        <a href="#" class="btn-small mr-2" data-toggle="modal" data-target="#exampleModalCenter">View</a>
+                        <a href="#" class="btn-small mr-2" >View</a>
                         <a href="" class="btn-round mr-2"><i class="fa fa-shopping-cart">share</i></a>
                         <a href="" class="btn-round"><i class="fa fa-heart">like</i></a>
                     </div>
