--- a/index.html
+++ b/index.html
@@ -583,12 +583,15 @@ a {
           <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
               <div class="modal-header">
-                <button type="button" class="close d-flex align-items-center justify-content-center" data-dismiss="modal" aria-label="Close">
-                  <span aria-hidden="true" class="fa fa-close"></span>
-                </button>
-                <p style="padding: 12px;">Mzamo The business</p>
+                
+                <div style="border-radius: 50%;">
+<img style="height: 40px; width: 40px; border-radius: 50%;" src="img/BKlogo.jpg" alt="">
+                </div>
                 <div class="product-btns">
-                  <a href="https://www.instagram.com/bertrandmaboneng/?hl=en" class="btn-small mr-2" >learn more</a>
+                  <a href="https://www.instagram.com/mzamomyeki/" class="btn-small mr-2" >learn more</a>
+                  <button type="button" class="close d-flex align-items-center justify-content-center" style="float: right;" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true" class="fa fa-close" >x</span>
+                  </button>
               </div>
               </div>
               <div class="modal-body p-4 p-md-5">
@@ -597,9 +600,12 @@ a {
                   <a href="#"> <img class="card-img" src="img/Mzamo Myeki.png" alt="Sbuda's Truck">
                     </a>
                     <br><br>
-                    <div class="product-btns" style="padding-top: 5px;">
-                      <a href="tel:+27734293663" class="btn-small mr-2" download="Sbuda's truck">Call photographer</a>
-                  </div>
+
+                <div class="product-btns"><a href="tel:+27734293663" class="btn-small mr-2" class="btn-round mr-2">
+                  <i class="fa fa-shopping-cart">call</i></a>
+                                    <a href="https://wa.me/+27734293663" class="btn-round"  >
+                                    <img style="height: 40px; width: 40px;" src="./img/whatsApp.png" alt=""></a>
+                                </div>
                 </form>
               </div>
             </div>
