--- a/index.html
+++ b/index.html
@@ -64,7 +64,6 @@
   <nav class="navbar navbar-expand-md  fixed-top maine-menu">
     <div class="container">
      <div id="my-nav" class="navbar-collapse">
-        
         <ul class="navbar-nav mx-auto">
           <a href="index.html"><img style="width:200px;" src="assets/img/BRANCH KODE LOGO.png" alt="">
          </ul>
@@ -592,7 +591,6 @@ a {
 <img style="height: 40px; width: 40px; border-radius: 50%;" src="img/BKlogo.jpg" alt="">
                 </div>
                 <div class="product-btns">
-                  <a href="#" class="btn-small mr-2" data-toggle="modal" data-target="#exampleModalCenterMore">learn more</a>
                   <button type="button" class="close d-flex align-items-center justify-content-center" style="float: right;" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true" class="fa fa-close" >x</span>
                   </button>
@@ -607,9 +605,17 @@ a {
 
                 <div class="product-btns"><a href="tel:+27734293663" class="btn-small mr-2" class="btn-round mr-2">
                   <i class="fa fa-shopping-cart">call</i></a>
-                                    <a href="https://wa.me/+27734293663" class="btn-round"  >
-                                    <img style="height: 40px; width: 40px;" src="./img/whatsApp.png" alt=""></a>
+                  <a href="https://wa.me/+27734293663" class="btn-round"  >
+                    <img style="height: 40px; width: 40px;" src="./img/whatsApp.png" alt="">
+                  </a>
+                  <br>
+                  <a href="https://wa.me/+27734293663" class="btn-round" >
+                                    <img style="height: 40px; width: 40px; margin: 0%; padding: 0px;" src="./img/instagram.svg" alt="">
+                                  </a>
+                                  
                                 </div>
+                                <br>
+                                <br>
 
                                 <div id="fb-root"></div>
 <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v13.0"></script>
